[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixelflood"
version = "0.1.0"
description = "Edge flood-fill transparency for pixel art — removes background white while preserving interior white details."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "PixelFlood contributors" }]
keywords = [
    "pixel-art",
    "sprite-extraction",
    "flood-fill",
    "image-processing",
    "alpha-channel",
    "game-dev",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
pixelflood = "pixelflood.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pixelflood"]

[tool.pytest.ini_options]
testpaths = ["tests"]
