[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixelflood"
version = "0.2.0"
description = "Pixel art processing toolkit — flood-fill transparency, sprite sheet extraction, and indexed palette sampling for Genesis PetCanvas."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "PixelFlood contributors" }]
keywords = [
    "pixel-art",
    "sprite-extraction",
    "flood-fill",
    "image-processing",
    "alpha-channel",
    "game-dev",
    "palette",
    "pixel-sampling",
    "typescript-export",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
pixelflood = "pixelflood.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pixelflood"]

[tool.pytest.ini_options]
testpaths = ["tests"]
